--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = 'beta 1.0'
+version = 'beta 1.1.1'
 group = 'com.archlunatic.rotp_zhp' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'RotP-Hermit Purple'
 
@@ -33,7 +33,7 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'official', version: '1.16.5'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
+
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
@@ -118,6 +118,10 @@ repositories {
         name "RotP Maven"
         url 'https://raw.githubusercontent.com/StandoByte/RotP-maven/main'
     }
+    maven{
+        name "Curse Maven"
+        url 'https://cursemaven.com'
+    }
 }
 
 dependencies {
@@ -146,27 +150,28 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-	implementation fg.deobf("standobyte.jojo:JJBA-RipplesOfThePast:${main_mod_version}")
+    implementation fg.deobf("standobyte.jojo:JJBA-RipplesOfThePast:${main_mod_version}")
+    implementation fg.deobf("curse.maven:camera-mod-289310:3169776")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
     manifest {
         attributes([
-            "Specification-Title": "RotP_HermitoPurple",
-            "Specification-Vendor": "RotP_HPZeml",
-            "Specification-Version": "Beta 1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "Beta 1",
-            "Implementation-Vendor" :"RotP_HPZeml",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Specification-Title": "RotP_HermitoPurple",
+                "Specification-Vendor": "RotP_HPZeml",
+                "Specification-Version": "Beta 1", // We are version 1 of ourselves
+                "Implementation-Title": project.name,
+                "Implementation-Version": "Beta 1",
+                "Implementation-Vendor" :"RotP_HPZeml",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
 // Example configuration to allow publishing using the maven-publish task
 // This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfJar') 
+jar.finalizedBy('reobfJar')
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
 
