--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId="rotp_zhp" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="Beta 1.1" #mandatory
+version="Beta 1.1.1" #mandatory
  # A display name for the mod
 displayName="RotP Hermit Purple" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -61,4 +61,10 @@ An addon for Ripples of the Past mod, adding a new Stand - Hermit Purple.
     mandatory=true
     versionRange="[0.2.2,0.3)"
     ordering="AFTER"
+    side="BOTH"
+[[dependencies.rotp_zhp]]
+    modId="camera"
+    mandatory=false
+    versionRange="[1.16.5-1.0.0,)"
+    ordering="NONE"
     side="BOTH"
