--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = 'beta 1.1.1'
-group = 'com.archlunatic.rotp_zhp' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'RotP-Hermit Purple'
+version = "${addon_version}"
+group = 'com.weever.rotp_mih' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'RotP-MadeInHeaven'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
@@ -55,7 +55,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                RotP_HP {
+                RotP_WT {
                     source sourceSets.main
                 }
             }
@@ -77,7 +77,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                RotP_HP {
+                RotP_WT {
                     source sourceSets.main
                 }
             }
@@ -99,10 +99,10 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', 'RotP_HP', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'RotP_WT', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
-                RotP_HP {
+                RotP_WT {
                     source sourceSets.main
                 }
             }
@@ -117,10 +117,6 @@ repositories {
     maven {
         name "RotP Maven"
         url 'https://raw.githubusercontent.com/StandoByte/RotP-maven/main'
-    }
-    maven{
-        name "Curse Maven"
-        url 'https://cursemaven.com'
     }
 }
 
@@ -151,19 +147,18 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
     implementation fg.deobf("standobyte.jojo:JJBA-RipplesOfThePast:${main_mod_version}")
-    implementation fg.deobf("curse.maven:camera-mod-289310:3169776")
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
     manifest {
         attributes([
-                "Specification-Title": "RotP_HermitoPurple",
-                "Specification-Vendor": "RotP_HPZeml",
-                "Specification-Version": "Beta 1", // We are version 1 of ourselves
+                "Specification-Title": "RotP_Mih",
+                "Specification-Vendor": "RotP_MIHsareus",
+                "Specification-Version": "1", // We are version 1 of ourselves
                 "Implementation-Title": project.name,
-                "Implementation-Version": "Beta 1",
-                "Implementation-Vendor" :"RotP_HPZeml",
+                "Implementation-Version": "${version}",
+                "Implementation-Vendor" :"RotP_MIHsareus",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
