--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ modId="rotp_zhp" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="1.0.9" #mandatory
+version="1.1" #mandatory
  # A display name for the mod
 displayName="RotP Hermit Purple" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
@@ -31,7 +31,7 @@ logoFile="logo.png" #optional
 # A text field displayed in the mod UI
 # credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
-authors="Makuta Zeml, StandoByte" #optional
+authors="Makuta Zeml, StandoByte, StandSkins and Icons by: MlgMC'Funkadelic'Player" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 An addon for Ripples of the Past mod, adding a new Stand - Hermit Purple.
