--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
 
-version = '1.3.2b'
+version = '1.3.2c'
 
 
 group = 'com.zeml.rotp_zhp' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
